Use empty statement for jobs logs entry on missing prepared statements
Follow up to https://github.com/crate/crate/pull/17480